--- a/src/components/Sidebar/style.css
+++ b/src/components/Sidebar/style.css
@@ -9,12 +9,14 @@
   overflow-x: hidden;
 }
 
+.title {
+  margin-bottom: 20px;
+  color: #333;
+}
+
 .input-table {
   display: flex;
-  flex-direction: row;
-  width: 100%;
   gap: 10px;
-  justify-content: center;
 }
 
 .input-column {
